--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -25,6 +25,7 @@ Bootstrap kit v1.1 - August 14 2016
 @import 'components/buttons';
 @import 'components/tables';
 @import 'components/tooltip';
+@import 'components/session';
 
 /* page layouts - styles groups of components */
 @import 'layouts/global';
